Criadas validações, correções, traduções e alguns tratamentos.

--- a/AvaliacaoDesenvolvedor/Views/Contatos/Create.cshtml
+++ b/AvaliacaoDesenvolvedor/Views/Contatos/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AvaliacaoDesenvolvedor.Models.Contato
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Criar";
 }
 
 <h1>Criar</h1>
