--- a/AvaliacaoDesenvolvedor/Views/Home/Index.cshtml
+++ b/AvaliacaoDesenvolvedor/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
     </div>
     <br/>
     <p class="lead">
-        O software apresenta todas as funcionalidades requisitadas.
+        Em casos de dúvidas, favor entrar em contato pelo <a href="https://www.linkedin.com/in/leandromartinsrj/">Linkedin</a> ou pelo meu WhatsApp: (21)98396-1652.
     </p>
     <hr class="my-4">
     <p>
