--- a/AvaliacaoDesenvolvedor/Views/Telefones/Delete.cshtml
+++ b/AvaliacaoDesenvolvedor/Views/Telefones/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AvaliacaoDesenvolvedor.Models.Telefone
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Deletar";
 }
 
 <h1>Deletar</h1>
