--- a/AvaliacaoDesenvolvedor/Views/Shared/Error.cshtml
+++ b/AvaliacaoDesenvolvedor/Views/Shared/Error.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ErrorViewModel
 @{
-    ViewData["Title"] = "Error";
+    ViewData["Title"] = "Erro";
 }
 
 <h1 class="text-danger">Erro.</h1>
