--- a/AvaliacaoDesenvolvedor/Views/Telefones/Create.cshtml
+++ b/AvaliacaoDesenvolvedor/Views/Telefones/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AvaliacaoDesenvolvedor.Models.Telefone
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Criar";
 }
 
 <h1>Criar</h1>
