--- a/AvaliacaoDesenvolvedor/Views/Telefones/Details.cshtml
+++ b/AvaliacaoDesenvolvedor/Views/Telefones/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AvaliacaoDesenvolvedor.Models.Telefone
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhes";
 }
 
 <h1>Detalhes</h1>
