--- a/AvaliacaoDesenvolvedor/Views/Telefones/Edit.cshtml
+++ b/AvaliacaoDesenvolvedor/Views/Telefones/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AvaliacaoDesenvolvedor.Models.Telefone
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar";
 }
 
 <h1>Editar</h1>
